# imessage-chatlab

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  README.zh-CN.md
.github/workflows/: release.yml
src/: avatar.rs  contacts.rs  data_source.rs  error.rs  exporter.rs  list.rs  logging.rs  main.rs  options.rs  preflight.rs  preview.rs  progress.rs  query.rs  runtime.rs
src/compatibility/: attachment_manager.rs  backup.rs
src/compatibility/converters/: audio.rs  common.rs  image.rs  sticker.rs  video.rs
src/wizard/: answers.rs  flow.rs  mod.rs  strings.rs
tests/: dry_run.rs
